{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 116,
  "lineage": "6792d9f3-116d-876d-903c-3983c5ede073",
  "resources": [
    {
      "module": "module.eu-central-1-vm2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "fsimonetti-instance",
      "provider": "provider.aws.eu-central-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b02d9d8787707f42",
            "arn": "arn:aws:ec2:eu-central-1:044137893184:instance/i-0969e43f60dbfe554",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0969e43f60dbfe554",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-foundation-private-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0ef8d2d251a23ee0c",
            "private_dns": "ip-172-31-46-84.eu-central-1.compute.internal",
            "private_ip": "172.31.46.84",
            "public_dns": "ec2-18-195-20-170.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.195.20.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-028403af90caf9c1f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "fsimonetti-webserver"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-ecd35591",
            "tags": {
              "Name": "fsimonetti-webserver1b"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08bb00b234a0cc91c"
            ]
          }
        }
      ]
    },
    {
      "module": "module.eu-central-1-vm",
      "mode": "managed",
      "type": "aws_instance",
      "name": "fsimonetti-instance",
      "provider": "provider.aws.eu-central-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cc293023f983ed53",
            "arn": "arn:aws:ec2:eu-central-1:044137893184:instance/i-0b5c6af8a7b169228",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0b5c6af8a7b169228",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-foundation-private-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0e2a051d7db9350da",
            "private_dns": "ip-172-31-40-159.eu-central-1.compute.internal",
            "private_ip": "172.31.40.159",
            "public_dns": "ec2-18-184-213-255.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.184.213.255",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-001cfdecaf25e3092",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "fsimonetti-webserver"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-ecd35591",
            "tags": {
              "Name": "fsimonetti-webserver1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08bb00b234a0cc91c"
            ]
          }
        }
      ]
    },
    {
      "module": "module.eu-west-1-vm",
      "mode": "managed",
      "type": "aws_instance",
      "name": "fsimonetti-instance",
      "provider": "provider.aws.eu-west-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d02d18114b594761",
            "arn": "arn:aws:ec2:eu-west-1:044137893184:instance/i-04056af3dfefce47f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-04056af3dfefce47f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-foundation-private-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0cbbde711ed5c177b",
            "private_dns": "ip-172-31-23-202.eu-west-1.compute.internal",
            "private_ip": "172.31.23.202",
            "public_dns": "ec2-54-171-51-117.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.171.51.117",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0a4fbe1802e3d9fa5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "fsimonetti-webserver"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-e4c764ac",
            "tags": {
              "Name": "fsimonetti-webserver2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0012f11afe0076442"
            ]
          }
        }
      ]
    },
    {
      "module": "module.eu-west-1-sg-webserver",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fsimonetti-secgroup-empty",
      "provider": "provider.aws.eu-west-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:044137893184:security-group/sg-0012f11afe0076442",
            "description": "Empty SG to be filled via aws_security_group_rule resource",
            "egress": [],
            "id": "sg-0012f11afe0076442",
            "ingress": [],
            "name": "fsimonetti-webserver",
            "name_prefix": null,
            "owner_id": "044137893184",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fsimonetti-webserver"
            },
            "timeouts": null,
            "vpc_id": "vpc-86fe77e0"
          }
        }
      ]
    },
    {
      "module": "module.eu-central-1-sg-webserver",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fsimonetti-secgroup-empty",
      "provider": "provider.aws.eu-central-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:044137893184:security-group/sg-08bb00b234a0cc91c",
            "description": "Empty SG to be filled via aws_security_group_rule resource",
            "egress": [],
            "id": "sg-08bb00b234a0cc91c",
            "ingress": [],
            "name": "fsimonetti-webserver",
            "name_prefix": null,
            "owner_id": "044137893184",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fsimonetti-webserver"
            },
            "timeouts": null,
            "vpc_id": "vpc-dc4dc4b7"
          }
        }
      ]
    },
    {
      "module": "module.eu-central-1-sg-rule-egress",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "fsimonetti-sg-rule",
      "provider": "provider.aws.eu-central-1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress allow all",
            "from_port": 0,
            "id": "sgrule-2381742616",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-08bb00b234a0cc91c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          }
        }
      ]
    },
    {
      "module": "module.eu-west-1-sg-rule-egress",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "fsimonetti-sg-rule",
      "provider": "provider.aws.eu-west-1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress allow all",
            "from_port": 0,
            "id": "sgrule-741167379",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0012f11afe0076442",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          }
        }
      ]
    },
    {
      "module": "module.eu-west-1-sg-rule-ingress-http",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "fsimonetti-sg-rule",
      "provider": "provider.aws.eu-west-1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Ingress HTTP",
            "from_port": 80,
            "id": "sgrule-861291549",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0012f11afe0076442",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.eu-central-1-sg-rule-ingress-ssh",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "fsimonetti-sg-rule",
      "provider": "provider.aws.eu-central-1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Ingress SSH",
            "from_port": 22,
            "id": "sgrule-1998800620",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08bb00b234a0cc91c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.eu-central-1-sg-rule-ingress-https",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "fsimonetti-sg-rule",
      "provider": "provider.aws.eu-central-1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Ingress HTTPS",
            "from_port": 443,
            "id": "sgrule-1195347114",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08bb00b234a0cc91c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.eu-central-1-sg-rule-ingress-http",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "fsimonetti-sg-rule",
      "provider": "provider.aws.eu-central-1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Ingress HTTP",
            "from_port": 80,
            "id": "sgrule-3249085273",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08bb00b234a0cc91c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.eu-west-1-sg-rule-ingress-https",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "fsimonetti-sg-rule",
      "provider": "provider.aws.eu-west-1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Ingress HTTPS",
            "from_port": 443,
            "id": "sgrule-687781937",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0012f11afe0076442",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.eu-west-1-sg-rule-ingress-ssh",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "fsimonetti-sg-rule",
      "provider": "provider.aws.eu-west-1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Ingress SSH",
            "from_port": 22,
            "id": "sgrule-2245794216",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0012f11afe0076442",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          }
        }
      ]
    }
  ]
}